<resources>
    <string name="app_name">Notifier</string>
    <string name="app_desc">Notifications Center</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_clear">Clear Statusbar</string>
    <string name="action_clear_all">Clear All</string>

    <string name="channel_name">notifier</string>
    <string name="channel_desc">Notifications Center</string>

    <string name="url_readme">
        https://github.com/niranjan-nagaraju/notification-center/blob/master/README.md
    </string>
    <string name="url_faq">
        https://github.com/niranjan-nagaraju/notification-center/blob/master/FAQ.md
    </string>
    <string name="url_bug">
        https://github.com/niranjan-nagaraju/notification-center/issues/
    </string>
    <string name="url_license">
        https://github.com/niranjan-nagaraju/notification-center/blob/master/LICENSE
    </string>
    <string name="url_src">
        https://github.com/niranjan-nagaraju/notification-center
    </string>
    <string name="url_releases">
        https://github.com/niranjan-nagaraju/notification-center/releases/tag/v1.0.2
    </string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_appslist">Select applications to exclude</string>
</resources>
